jucompiler.output
Terminals unused in grammar

    RESERVED
    INC
    DEC
    ARROW


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE

    2 class_body: ε
    3           | class_body field_decl
    4           | class_body method_decl
    5           | class_body SEMICOLON
    6           | class_body error SEMICOLON

    7 field_decl: PUBLIC STATIC type field_ids SEMICOLON

    8 field_ids: IDENTIFIER
    9          | field_ids COMMA IDENTIFIER

   10 method_decl: PUBLIC STATIC method_header method_body
   11            | PUBLIC STATIC type IDENTIFIER LPAR error RPAR method_body
   12            | PUBLIC STATIC VOID IDENTIFIER LPAR error RPAR method_body

   13 method_header: type IDENTIFIER LPAR formal_params RPAR
   14              | VOID IDENTIFIER LPAR formal_params RPAR

   15 formal_params: ε
   16              | param_list

   17 param_list: param_decl
   18           | param_list COMMA param_decl

   19 param_decl: type IDENTIFIER
   20           | STRING LSQ RSQ IDENTIFIER

   21 method_body: LBRACE method_body_items RBRACE

   22 method_body_items: ε
   23                  | method_body_items var_decl
   24                  | method_body_items stmt

   25 var_decl: type var_ids SEMICOLON

   26 var_ids: IDENTIFIER
   27        | var_ids COMMA IDENTIFIER

   28 stmt: LBRACE stmt_list RBRACE
   29     | IF LPAR expr RPAR stmt
   30     | IF LPAR expr RPAR stmt ELSE stmt
   31     | IF LPAR expr error stmt
   32     | IF LPAR expr error stmt ELSE stmt
   33     | WHILE LPAR expr RPAR stmt
   34     | RETURN expr SEMICOLON
   35     | RETURN SEMICOLON
   36     | IDENTIFIER ASSIGN expr SEMICOLON
   37     | PRINT LPAR expr RPAR SEMICOLON
   38     | PRINT LPAR STRLIT RPAR SEMICOLON
   39     | method_invocation SEMICOLON
   40     | parse_args SEMICOLON
   41     | SEMICOLON
   42     | error SEMICOLON

   43 stmt_list: ε
   44          | stmt_list stmt

   45 expr: assign_expr

   46 assign_expr: IDENTIFIER ASSIGN assign_expr
   47            | or_expr

   48 or_expr: or_expr OR and_expr
   49        | and_expr

   50 and_expr: and_expr AND xor_expr
   51         | xor_expr

   52 xor_expr: xor_expr XOR eq_expr
   53         | eq_expr

   54 eq_expr: eq_expr EQ rel_expr
   55        | eq_expr NE rel_expr
   56        | rel_expr

   57 rel_expr: rel_expr LT shift_expr
   58         | rel_expr GT shift_expr
   59         | rel_expr LE shift_expr
   60         | rel_expr GE shift_expr
   61         | shift_expr

   62 shift_expr: shift_expr LSHIFT add_expr
   63           | shift_expr RSHIFT add_expr
   64           | add_expr

   65 add_expr: add_expr PLUS mul_expr
   66         | add_expr MINUS mul_expr
   67         | mul_expr

   68 mul_expr: mul_expr STAR unary_expr
   69         | mul_expr DIV unary_expr
   70         | mul_expr MOD unary_expr
   71         | unary_expr

   72 unary_expr: NOT unary_expr
   73           | MINUS unary_expr
   74           | PLUS unary_expr
   75           | primary_expr

   76 primary_expr: IDENTIFIER
   77             | IDENTIFIER DOTLENGTH
   78             | NATURAL
   79             | DECIMAL
   80             | BOOLLIT
   81             | method_invocation
   82             | parse_args
   83             | LPAR expr RPAR
   84             | LPAR error RPAR

   85 method_invocation: IDENTIFIER LPAR args_opt RPAR
   86                  | IDENTIFIER LPAR error RPAR

   87 args_opt: ε
   88         | expr_list

   89 expr_list: expr
   90          | expr_list COMMA expr

   91 parse_args: PARSEINT LPAR IDENTIFIER LSQ expr RSQ RPAR

   92 type: INT
   93     | DOUBLE
   94     | BOOL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 11 12 31 32 42 84 86
    IDENTIFIER <lexeme> (258) 1 8 9 11 12 13 14 19 20 26 27 36 46 76 77 85 86 91
    NATURAL <lexeme> (259) 78
    DECIMAL <lexeme> (260) 79
    STRLIT <lexeme> (261) 38
    BOOLLIT <lexeme> (262) 80
    CLASS (263) 1
    PUBLIC (264) 7 10 11 12
    STATIC (265) 7 10 11 12
    RESERVED (266)
    BOOL (267) 94
    INT (268) 92
    DOUBLE (269) 93
    VOID (270) 12 14
    STRING (271) 20
    IF (272) 29 30 31 32
    ELSE (273) 30 32
    WHILE (274) 33
    RETURN (275) 34 35
    PRINT (276) 37 38
    PARSEINT (277) 91
    DOTLENGTH (278) 77
    INC (279)
    DEC (280)
    ARROW (281)
    ASSIGN (282) 36 46
    PLUS (283) 65 74
    MINUS (284) 66 73
    STAR (285) 68
    DIV (286) 69
    MOD (287) 70
    AND (288) 50
    OR (289) 48
    XOR (290) 52
    LSHIFT (291) 62
    RSHIFT (292) 63
    EQ (293) 54
    NE (294) 55
    LT (295) 57
    GT (296) 58
    LE (297) 59
    GE (298) 60
    NOT (299) 72
    LPAR (300) 11 12 13 14 29 30 31 32 33 37 38 83 84 85 86 91
    RPAR (301) 11 12 13 14 29 30 33 37 38 83 84 85 86 91
    LBRACE (302) 1 21 28
    RBRACE (303) 1 21 28
    LSQ (304) 20 91
    RSQ (305) 20 91
    SEMICOLON (306) 5 6 7 25 34 35 36 37 38 39 40 41 42
    COMMA (307) 9 18 27 90
    LOWER_THAN_ELSE (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program <node> (55)
        on left: 1
        on right: 0
    class_body <node> (56)
        on left: 2 3 4 5 6
        on right: 1 3 4 5 6
    field_decl <node> (57)
        on left: 7
        on right: 3
    field_ids <node> (58)
        on left: 8 9
        on right: 7 9
    method_decl <node> (59)
        on left: 10 11 12
        on right: 4
    method_header <node> (60)
        on left: 13 14
        on right: 10
    formal_params <node> (61)
        on left: 15 16
        on right: 13 14
    param_list <node> (62)
        on left: 17 18
        on right: 16 18
    param_decl <node> (63)
        on left: 19 20
        on right: 17 18
    method_body <node> (64)
        on left: 21
        on right: 10 11 12
    method_body_items <node> (65)
        on left: 22 23 24
        on right: 21 23 24
    var_decl <node> (66)
        on left: 25
        on right: 23
    var_ids <node> (67)
        on left: 26 27
        on right: 25 27
    stmt <node> (68)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 24 29 30 31 32 33 44
    stmt_list <node> (69)
        on left: 43 44
        on right: 28 44
    expr <node> (70)
        on left: 45
        on right: 29 30 31 32 33 34 36 37 83 89 90 91
    assign_expr <node> (71)
        on left: 46 47
        on right: 45 46
    or_expr <node> (72)
        on left: 48 49
        on right: 47 48
    and_expr <node> (73)
        on left: 50 51
        on right: 48 49 50
    xor_expr <node> (74)
        on left: 52 53
        on right: 50 51 52
    eq_expr <node> (75)
        on left: 54 55 56
        on right: 52 53 54 55
    rel_expr <node> (76)
        on left: 57 58 59 60 61
        on right: 54 55 56 57 58 59 60
    shift_expr <node> (77)
        on left: 62 63 64
        on right: 57 58 59 60 61 62 63
    add_expr <node> (78)
        on left: 65 66 67
        on right: 62 63 64 65 66
    mul_expr <node> (79)
        on left: 68 69 70 71
        on right: 65 66 67 68 69 70
    unary_expr <node> (80)
        on left: 72 73 74 75
        on right: 68 69 70 71 72 73 74
    primary_expr <node> (81)
        on left: 76 77 78 79 80 81 82 83 84
        on right: 75
    method_invocation <node> (82)
        on left: 85 86
        on right: 39 81
    args_opt <node> (83)
        on left: 87 88
        on right: 85
    expr_list <node> (84)
        on left: 89 90
        on right: 88 90
    parse_args <node> (85)
        on left: 91
        on right: 40 82
    type <node> (86)
        on left: 92 93 94
        on right: 7 11 13 19 25


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE class_body RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE class_body RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • class_body RBRACE

    $default  reduce using rule 2 (class_body)

    class_body  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE class_body • RBRACE
    3 class_body: class_body • field_decl
    4           | class_body • method_decl
    5           | class_body • SEMICOLON
    6           | class_body • error SEMICOLON

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    RBRACE     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    field_decl   go to state 11
    method_decl  go to state 12


State 7

    6 class_body: class_body error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    7 field_decl: PUBLIC • STATIC type field_ids SEMICOLON
   10 method_decl: PUBLIC • STATIC method_header method_body
   11            | PUBLIC • STATIC type IDENTIFIER LPAR error RPAR method_body
   12            | PUBLIC • STATIC VOID IDENTIFIER LPAR error RPAR method_body

    STATIC  shift, and go to state 14


State 9

    1 program: CLASS IDENTIFIER LBRACE class_body RBRACE •

    $default  reduce using rule 1 (program)


State 10

    5 class_body: class_body SEMICOLON •

    $default  reduce using rule 5 (class_body)


State 11

    3 class_body: class_body field_decl •

    $default  reduce using rule 3 (class_body)


State 12

    4 class_body: class_body method_decl •

    $default  reduce using rule 4 (class_body)


State 13

    6 class_body: class_body error SEMICOLON •

    $default  reduce using rule 6 (class_body)


State 14

    7 field_decl: PUBLIC STATIC • type field_ids SEMICOLON
   10 method_decl: PUBLIC STATIC • method_header method_body
   11            | PUBLIC STATIC • type IDENTIFIER LPAR error RPAR method_body
   12            | PUBLIC STATIC • VOID IDENTIFIER LPAR error RPAR method_body

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 17
    VOID    shift, and go to state 18

    method_header  go to state 19
    type           go to state 20


State 15

   94 type: BOOL •

    $default  reduce using rule 94 (type)


State 16

   92 type: INT •

    $default  reduce using rule 92 (type)


State 17

   93 type: DOUBLE •

    $default  reduce using rule 93 (type)


State 18

   12 method_decl: PUBLIC STATIC VOID • IDENTIFIER LPAR error RPAR method_body
   14 method_header: VOID • IDENTIFIER LPAR formal_params RPAR

    IDENTIFIER  shift, and go to state 21


State 19

   10 method_decl: PUBLIC STATIC method_header • method_body

    LBRACE  shift, and go to state 22

    method_body  go to state 23


State 20

    7 field_decl: PUBLIC STATIC type • field_ids SEMICOLON
   11 method_decl: PUBLIC STATIC type • IDENTIFIER LPAR error RPAR method_body
   13 method_header: type • IDENTIFIER LPAR formal_params RPAR

    IDENTIFIER  shift, and go to state 24

    field_ids  go to state 25


State 21

   12 method_decl: PUBLIC STATIC VOID IDENTIFIER • LPAR error RPAR method_body
   14 method_header: VOID IDENTIFIER • LPAR formal_params RPAR

    LPAR  shift, and go to state 26


State 22

   21 method_body: LBRACE • method_body_items RBRACE

    $default  reduce using rule 22 (method_body_items)

    method_body_items  go to state 27


State 23

   10 method_decl: PUBLIC STATIC method_header method_body •

    $default  reduce using rule 10 (method_decl)


State 24

    8 field_ids: IDENTIFIER •
   11 method_decl: PUBLIC STATIC type IDENTIFIER • LPAR error RPAR method_body
   13 method_header: type IDENTIFIER • LPAR formal_params RPAR

    LPAR  shift, and go to state 28

    $default  reduce using rule 8 (field_ids)


State 25

    7 field_decl: PUBLIC STATIC type field_ids • SEMICOLON
    9 field_ids: field_ids • COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 29
    COMMA      shift, and go to state 30


State 26

   12 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR • error RPAR method_body
   14 method_header: VOID IDENTIFIER LPAR • formal_params RPAR

    error   shift, and go to state 31
    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 17
    STRING  shift, and go to state 32

    RPAR  reduce using rule 15 (formal_params)

    formal_params  go to state 33
    param_list     go to state 34
    param_decl     go to state 35
    type           go to state 36


State 27

   21 method_body: LBRACE method_body_items • RBRACE
   23 method_body_items: method_body_items • var_decl
   24                  | method_body_items • stmt

    error       shift, and go to state 37
    IDENTIFIER  shift, and go to state 38
    BOOL        shift, and go to state 15
    INT         shift, and go to state 16
    DOUBLE      shift, and go to state 17
    IF          shift, and go to state 39
    WHILE       shift, and go to state 40
    RETURN      shift, and go to state 41
    PRINT       shift, and go to state 42
    PARSEINT    shift, and go to state 43
    LBRACE      shift, and go to state 44
    RBRACE      shift, and go to state 45
    SEMICOLON   shift, and go to state 46

    var_decl           go to state 47
    stmt               go to state 48
    method_invocation  go to state 49
    parse_args         go to state 50
    type               go to state 51


State 28

   11 method_decl: PUBLIC STATIC type IDENTIFIER LPAR • error RPAR method_body
   13 method_header: type IDENTIFIER LPAR • formal_params RPAR

    error   shift, and go to state 52
    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 17
    STRING  shift, and go to state 32

    RPAR  reduce using rule 15 (formal_params)

    formal_params  go to state 53
    param_list     go to state 34
    param_decl     go to state 35
    type           go to state 36


State 29

    7 field_decl: PUBLIC STATIC type field_ids SEMICOLON •

    $default  reduce using rule 7 (field_decl)


State 30

    9 field_ids: field_ids COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 31

   12 method_decl: PUBLIC STATIC VOID IDENTIFIER LPAR error • RPAR method_body

    RPAR  shift, and go to state 55


State 32

   20 param_decl: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 56


State 33

   14 method_header: VOID IDENTIFIER LPAR formal_params • RPAR

    RPAR  shift, and go to state 57


State 34

   16 formal_params: param_list •
   18 param_list: param_list • COMMA param_decl

    COMMA  shift, and go to state 58

    $default  reduce using rule 16 (formal_params)


State 35

   17 param_list: param_decl •

    $default  reduce using rule 17 (param_list)


State 36

   19 param_decl: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 59


State 37

   42 stmt: error • SEMICOLON

    SEMICOLON  shift, and go to state 60


State 38

   36 stmt: IDENTIFIER • ASSIGN expr SEMICOLON
   85 method_invocation: IDENTIFIER • LPAR args_opt RPAR
   86                  | IDENTIFIER • LPAR error RPAR

    ASSIGN  shift, and go to state 61
    LPAR    shift, and go to state 62


State 39

   29 stmt: IF • LPAR expr RPAR stmt
   30     | IF • LPAR expr RPAR stmt ELSE stmt
   31     | IF • LPAR expr error stmt
   32     | IF • LPAR expr error stmt ELSE stmt

    LPAR  shift, and go to state 63


State 40

   33 stmt: WHILE • LPAR expr RPAR stmt

    LPAR  shift, and go to state 64


State 41

   34 stmt: RETURN • expr SEMICOLON
   35     | RETURN • SEMICOLON

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 43
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    LPAR        shift, and go to state 72
    SEMICOLON   shift, and go to state 73

    expr               go to state 74
    assign_expr        go to state 75
    or_expr            go to state 76
    and_expr           go to state 77
    xor_expr           go to state 78
    eq_expr            go to state 79
    rel_expr           go to state 80
    shift_expr         go to state 81
    add_expr           go to state 82
    mul_expr           go to state 83
    unary_expr         go to state 84
    primary_expr       go to state 85
    method_invocation  go to state 86
    parse_args         go to state 87


State 42

   37 stmt: PRINT • LPAR expr RPAR SEMICOLON
   38     | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 88


State 43

   91 parse_args: PARSEINT • LPAR IDENTIFIER LSQ expr RSQ RPAR

    LPAR  shift, and go to state 89


State 44

   28 stmt: LBRACE • stmt_list RBRACE

    $default  reduce using rule 43 (stmt_list)

    stmt_list  go to state 90


State 45
